navbar and responsive

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <header>
         <nav class="navbar main-nav">
-            <div class="right-box">
+            <div class="left-box">
                 <div class="logo">
-                    <div class="nav-box main-nav-box">
+                    <div class="nav-box">
                         <img src="./Assets/Img/logo screenshot.jpg" alt="">
                     </div>
                 </div>
-                <div class="deliver nav-box main-nav-box">
+                <div class="deliver nav-box ">
                     <div class="addres-logo">
                         <img src="./Assets/Img/Addres-logo.jpg" alt="">
                     </div>
@@ -64,6 +64,30 @@
                 </select>
                 <input type="text" class="search-bar">
                 <input type="search" class="search-btn">
+            </div>
+            <div class="right-box">
+                <div class="state nav-box">
+                    <img src="./Assets/Img/US-flag.jpg" alt="">
+                </div>
+                <div class="account nav-box">
+                    <div class="up">
+                        Hello Benjamin
+                    </div>
+                    <div class="down">
+                        Account & lists
+                    </div>
+                </div>
+                <div class="orders nav-box">
+                    <div class="up">
+                        Returns
+                    </div>
+                    <div class="down">
+                        & Orders
+                    </div>
+                </div>
+                <div class="cart nav-box">
+                    <img src="./Assets/Img/cart-logo.jpg" alt="">
+                </div>
             </div>
         </nav>
         <nav class="navbar sub-nav">
