buy section added

--- a/index.html
+++ b/index.html
@@ -115,15 +115,97 @@
         </nav>
     </header>
     <main>
-        <section class="image-pane">
-
-        </section>
-        <section class="detailes-pane">
-
-        </section>
-        <section class="sale-pane">
-
-        </section>
+        <div class="path">
+            Clothing Shoes & Jewelry > Boys > Watches > Wrist Watches
+        </div>
+        <div class="panes">
+            <div class="container">
+                <section class="image-pane pane">
+                    
+                </section>
+                <section class="detailes-pane pane">
+                    <div class="top-top box">
+                        <div class="top">
+                            <a href="#">Brand: Disney</a>
+                            <h1>Disney Kids' TY1095 Toy Story Watch with Yellow Plastic Band</h1>
+                        </div>
+                        <div class="mid">
+                            <img src="./Assets/Img/stars-1.jpg" alt="">
+                            <a href="">1,150 ratings</a>
+                            |
+                            <a href="">5 answered questions</a>
+                        </div>
+                        <div class="bottom">
+                            <img src="./Assets/Img/amazons_choice.jpg" alt="">
+                            for
+                            "<a href="#">toy story watch for toddler boys</a>"
+                        </div>
+                    </div>
+                    <div class="top-down box">
+                        <div class="top">
+                            <p>List Price: <span class="line">$10.52</span><br>
+                                Price: <span class="red big">$8.81</span><br>
+                                You Save: <span class="red">$1.71 (16%)</span></p>
+                        </div>
+                        <div class="bottom">
+                            No Import Fees Deposit & $11.19 Shipping to Israel <a href="#">Detailes</a>
+                        </div>
+                    </div>
+                    <div class="down-top box">
+                        <h4>About this item</h3>
+                        <ul>
+                            <li>Watch featuring blue case with Toy Story graphic on round dial</li>
+                            <li>33 mm plastic case with mineral dial window</li>
+                            <li>Quartz movement with display</li>
+                            <li>Star-patterned plastic band with buckle closure</li>
+                            <li>Not water resistant</li>
+                        </ul>
+                        <a href="#">Report incorrect product information.</a>
+                    </div>
+                    <div class="down-down box">
+                        <a href="#">See product specifications ></a>
+                    </div>
+                </section>
+            </div>
+            <section class="sale-pane pane">
+                <div class="with-border">
+                    <span class="big red">$8.81</span> <br>
+                    <span class="light">No Import Fees Deposit & $11.19 Shipping to Israel</span> <br>
+                    <a href="#">Detailes</a><br><br>
+                    Delivery <span class="bold">Sunday, April 24</span> <br><br>
+                    Or fastest delivery <span class="bold"> Wednesday, April 13.</span> Order within 38 mins <br><br>
+                    <img src="./Assets/Img/little-addres-logo.jpg" alt="">
+                    <a class="small" href="">Deliver to Benjamin - Bnei Brak 51</a>
+                    <h2>In Stock.</h2>
+                    <select placeholder="qthwryjhywjw7j6">
+                        <option value="" disabled selected>Qty: 1</option>
+                        <option >1</option>
+                        <option >2</option>
+                        <option >3</option>
+                    </select> <br><br>
+                    <button class="round-btn btn-cart">Add to Cart</button> <br>
+                    <button class="round-btn btn-buy">Buy now</button> <br>
+                    <img src="./Assets/Img/secure-logo.jpg" alt="">
+                    <a href="">Secure transaction</a> <br>
+                    <span class="light small">Ships from</span> <span class="small"> Amazon.com</span><br>
+                    <span class="light small">Sold by</span> <span class="small">Amazon.com</span> <br>
+                    Return policy: <a href="#">Eligible for Return, Refund or Replacement within 30 days of receipt </a><br>
+                    <input type="checkbox">
+                    Add a gift receipt for easy returns
+                    <div class="border"></div>
+                    <button btn-list>add to List</button>
+                </div>
+                <div class="icons">
+                    Share
+                    <a href="#"></a>
+                    <a href="#"></a>
+                    <a href="#"></a>
+                    <a href="#"></a>
+                    <p>Have one to sell?</p>
+                    <button>Sell on Amazon</button>
+                </div>
+            </section>
+        </div>
     </main>
     <section class="buy-with">
 
