img section added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./normalize.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="./index.style.css">
     <title>Amazon.com: Disney Kids' TY1095</title>
 </head>
@@ -121,7 +125,17 @@
         <div class="panes">
             <div class="container">
                 <section class="image-pane pane">
-                    
+                    <div class="image-container">
+                        <div class="little">
+                            <div class="preview-1"></div>
+                            <div class="preview-2"></div>
+                            <div class="preview-3"></div>
+                        </div>
+                        <div class="big-pic">
+                            <div class="pic"></div>
+                            Roll over image to zoom in
+                        </div>
+                    </div>
                 </section>
                 <section class="detailes-pane pane">
                     <div class="top-top box">
@@ -175,8 +189,10 @@
                     Delivery <span class="bold">Sunday, April 24</span> <br><br>
                     Or fastest delivery <span class="bold"> Wednesday, April 13.</span> Order within 38 mins <br><br>
                     <img src="./Assets/Img/little-addres-logo.jpg" alt="">
-                    <a class="small" href="">Deliver to Benjamin - Bnei Brak 51</a>
+                    <a class="small" href="">Deliver to Benjamin - Bnei Brak</a>
+                    <br><br>
                     <h2>In Stock.</h2>
+                    <br>
                     <select placeholder="qthwryjhywjw7j6">
                         <option value="" disabled selected>Qty: 1</option>
                         <option >1</option>
@@ -186,21 +202,21 @@
                     <button class="round-btn btn-cart">Add to Cart</button> <br>
                     <button class="round-btn btn-buy">Buy now</button> <br>
                     <img src="./Assets/Img/secure-logo.jpg" alt="">
-                    <a href="">Secure transaction</a> <br>
+                    <a href="">Secure transaction</a> <br><br>
                     <span class="light small">Ships from</span> <span class="small"> Amazon.com</span><br>
-                    <span class="light small">Sold by</span> <span class="small">Amazon.com</span> <br>
+                    <span class="light small">Sold by</span> <span class="small">Amazon.com</span> <br><br>
                     Return policy: <a href="#">Eligible for Return, Refund or Replacement within 30 days of receipt </a><br>
                     <input type="checkbox">
                     Add a gift receipt for easy returns
                     <div class="border"></div>
-                    <button btn-list>add to List</button>
+                    <button class="btn-list">Add to List</button>
                 </div>
                 <div class="icons">
                     Share
                     <a href="#"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
+                    <a href="#" class="facebook"></a>
+                    <a href="#" class="twitter"></a>
+                    <a href="#" class="pinterest"></a>
                     <p>Have one to sell?</p>
                     <button>Sell on Amazon</button>
                 </div>
