carousel section added

--- a/index.html
+++ b/index.html
@@ -228,10 +228,45 @@
     </section>
     <footer>
         <div class="tag">
-
+            <h2>What other items do customers buy after viewing this item?</h2>
         </div>
         <div class="carousel">
-
+            <div class="arrow arr-1">
+                <button><</button>
+            </div>
+            <div class="table">
+                <div class="item item-1">
+                    <img src="./Assets/Img/item-1.jpg" alt="">
+                    <a href="">Disney Quartz Watch with Plastic Strap, Black, 14.75 (Model: TYM4031)</a>
+                </div>
+                <div class="item item-2">
+                    <img src="./Assets/Img/item-2.jpg" alt="">
+                    <a href="">Accutime Boys' Quartz Watch with Plastic Strap, Red, 16 (Model: SPD3515A)</a>
+                </div>
+                <div class="item item-3">
+                    <img src="./Assets/Img/item-3.jpg" alt="">
+                    <a href="">Disney Boy's Digital Plastic Casual Watch, Color:Blue (Model: MK1328)</a>
+                </div>
+                <div class="item item-4">
+                    <img src="./Assets/Img/item-4.jpg" alt="">
+                    <a href="">Disney's Frozen Kids' Digital Watch with Elsa and Anna on the Dial, Purple Casing</a>
+                </div>
+                <div class="item item-5">
+                    <img src="./Assets/Img/item-5.jpg" alt="">
+                    <a href="">Fisher-Price Imaginext Disney Pixar Toy Story Buzz Lightyear Space Mission Playset with 2 figures for preschool kids ages 3 to 8 years</a>
+                </div>
+                <div class="item item-6">
+                    <img src="./Assets/Img/item-6.jpg" alt="">
+                    <a href="">Paw Patrol Kids' Digital Watch with Blue Case, Comfortable Blue Strap, Easy to Buckle - Official 3D Paw Patrol Character on the Dial</a>
+                </div>
+                <div class="item item-7">
+                    <img src="./Assets/Img/item-7.jpg" alt="">
+                    <a href="">Disney Quartz Watch with Plastic Strap, Black, 14.75 (Model: TYM4030)</a>
+                </div>
+            </div>
+            <div class="arrow arr-2">
+                <button>></button>
+            </div>
         </div>
     </footer>
 </body>
